[package]
name = "DUSKRust"
version = "0.1.0"
edition = "2024"

[dependencies]
qlock = "0.0.1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
clap = "4.5.40"
dialoguer = "0.11.0"
libloading = "0.8.8"
once_cell = "1.21.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
tracing-appender = "0.2.3"

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
tdlib-rs = { version = "1.1.0", features = ["download-tdlib"] }

[target.'cfg(target_os = "android")'.dependencies]
tdlib-rs = { version = "1.1.0", features = ["local-tdlib"] }
